fix timeline items to display properly date and name with no overflow

--- a/frontend/src/components/Cards/styles.css
+++ b/frontend/src/components/Cards/styles.css
@@ -45,7 +45,7 @@
 }
 
 .name {
-  border: transparent;
+  border: none;
   background-color: inherit;
   border-bottom: solid white 2px;
   color: white;
@@ -161,6 +161,8 @@
 #instanceDescription {
   padding: 5px;
   min-height: 100px;
+  padding-top: 30px;
+  text-align:justify
 }
 
 #button {
