--- a/frontend/src/components/Timeline.css
+++ b/frontend/src/components/Timeline.css
@@ -49,6 +49,7 @@ body {
 }
 
 .timeline-item-content {
+  max-width: 100%;
   background-color: #333;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
@@ -103,6 +104,7 @@ body {
 }
 
 .event-list {
+  max-width: 100%;
   margin-top: 30px;
 }
 
@@ -191,8 +193,21 @@ body {
   list-style: none;
 }
 
-#instance-list-date {
-  text-decoration: underline;
+.list-items {
+  display: flex;
+
+}
+
+#instance-list-name {
+  width: 70%;
+  white-space: nowrap;  
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: rgba(255,255,255,.55);
+}
+
+#instance-list-name:hover {
+  color: white;
 }
 
 .ul-instance {
